--- a/xiayu.ini
+++ b/xiayu.ini
@@ -19,8 +19,8 @@ custom_proxy_group=🇺🇲 美国节点`url-test`(美|US|United States)`http://
 custom_proxy_group=🇯🇵 日本节点`url-test`(日本|JP|Japan)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇸🇬 新加坡节点`url-test`(新加坡|SG|Singapore)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=♻️其他节点`url-test`(距离|剩余|官方群组|套餐)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择
-custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🎯 全球直连`.*
+custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 快捷选择
+custom_proxy_group=🐟 漏网之鱼`select`[]🚀 快捷选择`[]🎯 全球直连`.*
 
 enable_rule_generator=true
 overwrite_original_rules=true
